--- a/kilenc/UnitTestExample.Test/UnitTestExample.Test.csproj
+++ b/kilenc/UnitTestExample.Test/UnitTestExample.Test.csproj
@@ -76,6 +76,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\kilenc\kilenc.csproj">
+      <Project>{34f0951f-bc0f-40b0-b6a8-da04914140d8}</Project>
+      <Name>kilenc</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
